@@ -6,7 +6,7 @@
 	 section="/fun"
 	 icon="boardicons/colors.png"
 	 author="">
-	 <_title>Go to Colour activities</_title>
+	 <_title>Go to Color activities</_title>
 	 <_description>Left-click the mouse on an activity to select it.</_description>
   </Board>
 </GCompris>
