@@ -9,7 +9,7 @@
         author="Clement Coudoin (clement.coudoin@free.fr)"
         boarddir="">
         <_title>Guess a number</_title>
-        <_description>Help Tux escape the cave. Tux hide a number that you must discover.</_description>
+        <_description>Help Tux escape the cave. Tux hides a number that you must discover.</_description>
         <_prerequisite>Numbers from 1 to 1000 for the last level.</_prerequisite>
         <_goal></_goal>
         <_manual>Read the instructions that give you the range of the number to find. Enter a number in the top right blue entry box. Tux tell you if your number is higher or lower. Then enter another number. The distance between Tux and the escape area on the right represents how far you are from the right number. If Tux is above or under the escape area, it means your number is higher or under the right number.</_manual>
