@@ -1,5 +1,15 @@
 2005-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	Merged from HEAD.
+	Fixed typos.
+	Now money is not Euros only. You can translate it and put your money symbol.
+
+	* boards/colors_group.xml.in:
+	* boards/guessnumber.xml.in:
+	* src/boards/money.c: (money_next_level):
+
+2005-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	Merge of HEAD. 
 	Fixed several issues related to change between fullscreen mode
 	and window mode. Now if xrandr is enabled, the configuration dialog in GCompris
